[workspace]

members = [
    "attest-data",
    "attest-mock",
    "barcode",
    "dice-cert-tmpl",
    "dice-mfg",
    "dice-mfg-msgs",
    "yhsm-audit",
    "verifier-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
attest.path = "attest"
chrono = { version = "0.4.42", default-features=false }
clap = { version = "4.5.51", features = ["derive", "env"] }
const-oid = { version = "0.9.6", default-features = false }
corncobs = "0.1"
der = { version = "0.7.10", default-features = false }
ecdsa = { version = "0.16", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
getrandom = "0.3.4"
hex.version = "0.4"
hubpack = "0.1"
knuffel = "3.2.0"
libipcc = { git = "https://github.com/oxidecomputer/ipcc-rs", rev = "7cdf2ab9c8d9e9267a8b366aa780c6c26f9a5ecf" }
log = { version = "0.4.28", features = ["std"] }
# pin miette to same version used by knuffel
miette = { version = "5.10", features = ["fancy"] }
p384 = { version = "0.13.1", default-features = false }
pem-rfc7468 = { version = "0.7.0", default-features = false }
rats-corim.git = "https://github.com/oxidecomputer/rats-corim"
ron = "0.12"
rpassword = "7.4.0"
salty = { version = "0.3", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde-big-array = "0.5.1"
serde_json = { version = "1.0.145", features = ["std", "alloc"] }
serde_with = { version = "3.15.1", default-features = false }
serialport = { git = "https://github.com/jgallagher/serialport-rs", branch = "illumos-support" }
sha2 = "0.10.9"
sha3 = { version = "0.10.8", default-features = false }
slog = { version = "2.8.2", default-features = false }
slog-error-chain = { git = "https://github.com/oxidecomputer/slog-error-chain", rev = "15f69041f45774602108e47fb25e705dc23acfb2" }
static_assertions = { version = "1.1.0", default-features = false }
string-error = "0.1"
tempfile = { version = "3.23.0", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
x509-cert = { version = "0.2.5", default-features = false }
yubihsm = { git = "https://github.com/oxidecomputer/yubihsm.rs", branch="v0.42.0-with-audit", features = ["default", "usb"] }
zerocopy = "0.8.27"
zeroize = { version = "1.8.2", default-features = false }
