[package]
name = "attest-data"
version = "0.4.0"
edition = "2021"

[dependencies]
getrandom = { workspace = true, optional = true }
hubpack.workspace = true
thiserror = { workspace = true, optional = true }
salty.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"] }
sha3.workspace = true
static_assertions.workspace = true

[features]
std = ["getrandom", "thiserror"]
