[package]
name = "attest-data"
version = "0.5.0"
edition = "2021"

[dependencies]
const-oid.workspace = true
der = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
hubpack.workspace = true
rats-corim = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
salty.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"] }
sha3.workspace = true
static_assertions.workspace = true

[features]
default = ["std"]
std = ["der/std", "der/derive", "der/oid", "getrandom", "hex", "rats-corim", "sha3/oid", "thiserror" ]
