[package]
name = "attest-mock"
version = "0.1.0"
edition = "2024"
description = "tools & library to generate attestation artifacts from KDL"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
attest-data = { path = "../attest-data", features = ["std"] }
clap.workspace = true
hex.workspace = true
hubpack.workspace = true
knus.workspace = true
rats-corim.workspace = true
slog.workspace = true
slog-error-chain = { workspace = true, features = ["derive"] }
thiserror.workspace = true
