[package]
name = "dice-cert-check"
version = "0.1.0"
edition = "2021"

# NOTE: We're currently using crates from the main development branch of the
# rust crypto formats git repo. We do this because:
# - const-oid doesn't have the OIDs from RFC 8410 in a release yet
# - the latest x509-cert release has a bug that prevents us from consuming
#   PEM encoded certs. This has been fixed on the development branch but
#   hasn't made it into a release yet.
[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
const-oid = { git = "https://github.com/RustCrypto/formats" }
ecdsa = "0.15.1"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.17"
p384 = "0.12.0"
pem-rfc7468 = { git = "https://github.com/RustCrypto/formats" }
ring-compat = { version = "0.6.0", features = ["std"] }
sha2 = "0.10.6"
thiserror = "1.0.38"
x509-cert = { git = "https://github.com/RustCrypto/formats", features = ["pem", "std"] }
