[package]
name = "dice-cert-check"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true, features = ["derive"] }
const-oid = { version = "0.9.4", features = ["db"] }
env_logger = { workspace = true, default-features = true }
hex = { workspace = true, default-features = true }
log = { workspace = true, default-features = true, features = ["std"] }
p384 = { workspace = true, default-features = true }
pem-rfc7468 = { workspace = true, default-features = true }
ring-compat = { workspace = true, default-features = true, features = ["std"] }
sha2 = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
x509-cert = { workspace = true, default-features = true, features = ["pem"] }
