[package]
name = "dice-cert-tmpl"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow.workspace = true
clap.workspace = true
const-oid = { workspace = true, features = ["db"] }
dice-mfg-msgs = { path = "../dice-mfg-msgs" }
pem-rfc7468 = { workspace = true, features = ["alloc", "std"] }
salty.workspace = true
tempfile.workspace = true
x509-cert = { workspace = true, features = ["std"] }
