[package]
name = "dice-mfg-msgs"
version = "0.3.0"
edition = "2021"

[dependencies]
dice-util-barcode = { path = "../barcode", default-features = false }
const-oid = { workspace = true, optional = true }
corncobs.workspace = true
hubpack.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-big-array.workspace = true
thiserror.workspace = true
x509-cert = { workspace = true, optional = true }
zerocopy.workspace = true

[dev-dependencies]
anyhow.workspace = true

[features]
pdv2 = ["dice-util-barcode/pdv2"]
std = ["const-oid/db", "dice-util-barcode/oxv1", "dice-util-barcode/oxv2", "dice-util-barcode/pdv1", "dice-util-barcode/std", "x509-cert/pem", "x509-cert/std"]
