[package]
name = "dice-mfg"
version = "0.1.1"
edition = "2021"
description = "A command line tool for creating and programming device identities for Oxide RoTs."
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["clock", "std"] }
clap.workspace = true
const-oid = { version = "0.9.6", features = ["std", "db"] }
corncobs.workspace = true
dice-mfg-msgs = { path = "../dice-mfg-msgs", features = ["std"] }
env_logger.workspace = true
log.workspace = true
pem = { workspace = true, features = ["std"] }
rpassword.workspace = true
serde_json.workspace = true
serialport.workspace = true
sha3.workspace = true
string-error.workspace = true
tempfile.workspace = true
x509-cert = { workspace = true, features = ["pem", "std"] }
yubihsm.workspace = true
zerocopy.workspace = true
zeroize = { workspace = true, features = ["std", "alloc"] }
