[package]
name = "dice-verifier"
version = "0.3.0-pre0"
edition = "2021"
description = "a library crate implementing the attestation verifier"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
attest-data = { path = "../attest-data", features = ["std"] }
const-oid.workspace = true
ed25519-dalek = { workspace = true, features = ["std"] }
env_logger.workspace = true
hubpack.workspace = true
log.workspace = true
p384 = { workspace = true, default-features = true }
sha3.workspace = true
thiserror.workspace = true
x509-cert = { workspace = true, default-features = true }
