[package]
name = "dice-verifier"
version = "0.3.0-pre0"
edition = "2021"
description = "a library crate implementing the attestation verifier"
license = "MPL-2.0"

[dependencies]
attest-data = { path = "../attest-data", features = ["std"] }
async-trait.workspace = true
const-oid.workspace = true
ed25519-dalek = { workspace = true, features = ["std"] }
env_logger.workspace = true
hex = { workspace = true }
hubpack.workspace = true
libipcc = { workspace = true, optional = true }
log.workspace = true
p384 = { workspace = true, default-features = true }
rats-corim.workspace = true
sha3.workspace = true
sled-agent-client = { workspace = true, optional = true }
sled-agent-types-versions = { workspace = true, optional = true }
slog.workspace = true
tokio = { workspace = true, features = [ "net", "rt", "time", "process" ] }
tempfile.workspace = true
thiserror.workspace = true
x509-cert = { workspace = true, default-features = true }
humility-probes-core = { git =  "https://github.com/oxidecomputer/humility" }
humility-core = { git =  "https://github.com/oxidecomputer/humility" }
humility-idol = { git =  "https://github.com/oxidecomputer/humility" }
humility-hiffy = { git =  "https://github.com/oxidecomputer/humility" }
# This is only for handling some of the errors from humility
anyhow.workspace = true

[build-dependencies]
anyhow.workspace = true
camino.workspace = true
pki-playground.workspace = true

[dev-dependencies]
attest-data = { path = "../attest-data", features = ["std", "testing"] }

[features]
testing = []
ipcc = ["libipcc"]
mock = ["ed25519-dalek/pem"]
sled-agent = ["sled-agent-client", "sled-agent-types-versions"]
