[package]
name = "yubihsm-audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
derive_more.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
yubihsm.workspace = true
