[package]
name = "yubihsm-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
yubihsm.workspace = true
